// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a quiz 1`] = `
Array [
  <header
    className="MuiPaper-root-1229 MuiPaper-elevation4-1235 MuiAppBar-root-1220 MuiAppBar-positionStatic-1224 MuiAppBar-colorPrimary-1227"
>
    <div
        className="MuiToolbar-root-1256 MuiToolbar-regular-1258 MuiToolbar-gutters-1257"
    >
        <h6
            className="MuiTypography-root-1260 MuiTypography-h6-1277 MuiTypography-colorInherit-1289"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-1295 MuiGrid-spacing-xs-16-1318 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            />
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            />
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            />
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            >
                <center>
                    <img
                        alt=""
                        className="Connect-Widget--maxImageSize-3"
                        height={undefined}
                        src="https://openplatform.dbc.dk/v3/storage/3ac3d6ce-3c19-427c-88b3-ce11931186e1"
                        style={undefined}
                        width={undefined}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            >
                <div
                    className="MuiTypography-root-1260 MuiTypography-body1-1269"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<h1 id=\\"velkommen-til-quizzen\\">Velkommen til quizzen</h1>
                            <p>Ud i det blå</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            >
                <button
                    className="MuiButtonBase-root-1418 MuiButton-root-1392 MuiButton-contained-1403 MuiButton-containedPrimary-1404 MuiButton-raised-1406 MuiButton-raisedPrimary-1407 MuiButton-fullWidth-1417"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-1393"
                    >
                        Start
                    </span>
                    <span
                        className="MuiTouchRipple-root-1421"
                    />
                </button>
            </div>
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            />
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            />
            <div
                className="MuiGrid-item-1296 MuiGrid-grid-xs-12-1335"
            />
        </div>
    </div>
</center>,
]
`;

exports[`maps dispatch to props 1`] = `
Object {
  "onAction": [Function],
  "setQuizWidth": [Function],
}
`;

exports[`maps state to props 1`] = `
<div>
  "Quiz screen missing or loading..."
</div>
`;

exports[`renders a question 1`] = `
Array [
  <header
    className="MuiPaper-root-1021 MuiPaper-elevation4-1027 MuiAppBar-root-1012 MuiAppBar-positionStatic-1016 MuiAppBar-colorPrimary-1019"
>
    <div
        className="MuiToolbar-root-1048 MuiToolbar-regular-1050 MuiToolbar-gutters-1049"
    >
        <h6
            className="MuiTypography-root-1052 MuiTypography-h6-1069 MuiTypography-colorInherit-1081"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-1087 MuiGrid-spacing-xs-16-1110 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            />
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            />
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            />
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            >
                <div
                    className="MuiTypography-root-1052 MuiTypography-body1-1061"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Hvad er svaret</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            >
                <div
                    className="MuiGrid-container-1087 MuiGrid-spacing-xs-16-1110"
                >
                    <div
                        className="MuiGrid-item-1088 MuiGrid-grid-xs-6-1121"
                    >
                        <button
                            className="MuiButtonBase-root-1210 MuiButton-root-1184 MuiButton-contained-1195 MuiButton-containedPrimary-1196 MuiButton-raised-1198 MuiButton-raisedPrimary-1199 MuiButton-fullWidth-1209"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1185"
                            >
                                
                                
                                Svar A
                            </span>
                            <span
                                className="MuiTouchRipple-root-1213"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-1088 MuiGrid-grid-xs-6-1121"
                    >
                        <button
                            className="MuiButtonBase-root-1210 MuiButton-root-1184 MuiButton-contained-1195 MuiButton-containedPrimary-1196 MuiButton-raised-1198 MuiButton-raisedPrimary-1199 MuiButton-fullWidth-1209"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1185"
                            >
                                Svar B
                            </span>
                            <span
                                className="MuiTouchRipple-root-1213"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-1088 MuiGrid-grid-xs-6-1121"
                    >
                        <button
                            className="MuiButtonBase-root-1210 MuiButton-root-1184 MuiButton-contained-1195 MuiButton-containedPrimary-1196 MuiButton-raised-1198 MuiButton-raisedPrimary-1199 MuiButton-fullWidth-1209"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1185"
                            >
                                <img
                                    alt="Svar C"
                                    className={undefined}
                                    height={128}
                                    src="https://openplatform.dbc.dk/v3/storage/a6c4aa8f-8f42-4d97-a184-933c899885ab?height=128"
                                    style={
                                        Object {
                                            "borderRadius": 4,
                                          }
                                    }
                                    width={undefined}
                                />
                                <span>
                                     
                                </span>
                                Svar C
                            </span>
                            <span
                                className="MuiTouchRipple-root-1213"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-1088 MuiGrid-grid-xs-6-1121"
                    />
                    <div
                        className="MuiGrid-item-1088 MuiGrid-grid-xs-6-1121"
                    >
                        <button
                            className="MuiButtonBase-root-1210 MuiButton-root-1184 MuiButton-contained-1195 MuiButton-containedPrimary-1196 MuiButton-raised-1198 MuiButton-raisedPrimary-1199 MuiButton-fullWidth-1209"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-1185"
                            >
                                <img
                                    alt=""
                                    className={undefined}
                                    height={128}
                                    src="https://openplatform.dbc.dk/v3/storage/d228c861-6d6c-4629-afa4-49b01bb04a52?height=128"
                                    style={
                                        Object {
                                            "borderRadius": 4,
                                          }
                                    }
                                    width={undefined}
                                />
                                <span>
                                     
                                </span>
                                
                            </span>
                            <span
                                className="MuiTouchRipple-root-1213"
                            />
                        </button>
                    </div>
                </div>
            </div>
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            >
                <p />
            </div>
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            >
                <button
                    className="MuiButtonBase-root-1210 MuiButton-root-1184 MuiButton-contained-1195 MuiButton-containedSecondary-1197 MuiButton-raised-1198 MuiButton-raisedSecondary-1200 MuiButton-fullWidth-1209"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-1185"
                    >
                        hjælp
                    </span>
                    <span
                        className="MuiTouchRipple-root-1213"
                    />
                </button>
            </div>
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            />
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            />
            <div
                className="MuiGrid-item-1088 MuiGrid-grid-xs-12-1127"
            />
        </div>
    </div>
</center>,
]
`;

exports[`renders different endings 1`] = `
Array [
  <header
    className="MuiPaper-root-433 MuiPaper-elevation4-439 MuiAppBar-root-424 MuiAppBar-positionStatic-428 MuiAppBar-colorPrimary-431"
>
    <div
        className="MuiToolbar-root-460 MuiToolbar-regular-462 MuiToolbar-gutters-461"
    >
        <h6
            className="MuiTypography-root-464 MuiTypography-h6-481 MuiTypography-colorInherit-493"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-499 MuiGrid-spacing-xs-16-522 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            />
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            />
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            />
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            >
                <div
                    className="MuiTypography-root-464 MuiTypography-body1-473"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Spørgsmål?</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            >
                <div
                    className="MuiGrid-container-499 MuiGrid-spacing-xs-16-522"
                >
                    <div
                        className="MuiGrid-item-500 MuiGrid-grid-xs-6-533"
                    >
                        <button
                            className="MuiButtonBase-root-622 MuiButton-root-596 MuiButton-contained-607 MuiButton-containedPrimary-608 MuiButton-raised-610 MuiButton-raisedPrimary-611 MuiButton-fullWidth-621"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-597"
                            >
                                Svar A
                            </span>
                            <span
                                className="MuiTouchRipple-root-625"
                            />
                        </button>
                    </div>
                    <div
                        className="MuiGrid-item-500 MuiGrid-grid-xs-6-533"
                    >
                        <button
                            className="MuiButtonBase-root-622 MuiButton-root-596 MuiButton-contained-607 MuiButton-containedPrimary-608 MuiButton-raised-610 MuiButton-raisedPrimary-611 MuiButton-fullWidth-621"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex="0"
                            type="button"
                        >
                            <span
                                className="MuiButton-label-597"
                            >
                                Svar B
                            </span>
                            <span
                                className="MuiTouchRipple-root-625"
                            />
                        </button>
                    </div>
                </div>
            </div>
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            >
                <p />
            </div>
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            >
                <button
                    className="MuiButtonBase-root-622 MuiButton-root-596 MuiButton-contained-607 MuiButton-containedSecondary-609 MuiButton-raised-610 MuiButton-raisedSecondary-612 MuiButton-fullWidth-621"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-597"
                    >
                        hjælp
                    </span>
                    <span
                        className="MuiTouchRipple-root-625"
                    />
                </button>
            </div>
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            />
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            />
            <div
                className="MuiGrid-item-500 MuiGrid-grid-xs-12-539"
            />
        </div>
    </div>
</center>,
]
`;

exports[`renders different endings 2`] = `
Array [
  <header
    className="MuiPaper-root-641 MuiPaper-elevation4-647 MuiAppBar-root-632 MuiAppBar-positionStatic-636 MuiAppBar-colorPrimary-639"
>
    <div
        className="MuiToolbar-root-668 MuiToolbar-regular-670 MuiToolbar-gutters-669"
    >
        <h6
            className="MuiTypography-root-672 MuiTypography-h6-689 MuiTypography-colorInherit-701"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-707 MuiGrid-spacing-xs-16-730 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            />
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            />
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            />
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            >
                <center>
                    <iframe
                        allow="autoplay; encrypted-media"
                        allowFullScreen={true}
                        frameborder="0"
                        height={432}
                        src="https://www.youtube.com/embed/JkMwq1aAAfE?autoplay=0"
                        title="YouTube Video"
                        width={768}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            >
                <div
                    className="MuiTypography-root-672 MuiTypography-body1-681"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Tillykke, du havde  ud af  rigtige. Total: </p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            >
                <button
                    className="MuiButtonBase-root-830 MuiButton-root-804 MuiButton-contained-815 MuiButton-containedPrimary-816 MuiButton-raised-818 MuiButton-raisedPrimary-819 MuiButton-fullWidth-829"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-805"
                    >
                        Prøv igen
                    </span>
                    <span
                        className="MuiTouchRipple-root-833"
                    />
                </button>
            </div>
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            />
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            />
            <div
                className="MuiGrid-item-708 MuiGrid-grid-xs-12-747"
            />
        </div>
    </div>
</center>,
]
`;

exports[`renders different endings 3`] = `
Array [
  <header
    className="MuiPaper-root-849 MuiPaper-elevation4-855 MuiAppBar-root-840 MuiAppBar-positionStatic-844 MuiAppBar-colorPrimary-847"
>
    <div
        className="MuiToolbar-root-876 MuiToolbar-regular-878 MuiToolbar-gutters-877"
    >
        <h6
            className="MuiTypography-root-880 MuiTypography-h6-897 MuiTypography-colorInherit-909"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-915 MuiGrid-spacing-xs-16-938 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            />
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            />
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            />
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            >
                <center>
                    <iframe
                        allow="autoplay; encrypted-media"
                        allowFullScreen={true}
                        frameborder="0"
                        height={432}
                        src="https://player.vimeo.com/video/218885093?autoplay=0"
                        title="Vimeo Video"
                        width={768}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            >
                <div
                    className="MuiTypography-root-880 MuiTypography-body1-889"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p><strong>Error: Unclosed tag at 86</strong></p>
                            <p>Tillykke, du havde {{correct}} ud af {{questionCount}} rigtige, yeah... fejl: {{ hello</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            />
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            />
            <div
                className="MuiGrid-item-916 MuiGrid-grid-xs-12-955"
            />
        </div>
    </div>
</center>,
]
`;

exports[`renders info pages 1`] = `
Array [
  <header
    className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-8 MuiAppBar-positionStatic-12 MuiAppBar-colorPrimary-15"
>
    <div
        className="MuiToolbar-root-44 MuiToolbar-regular-46 MuiToolbar-gutters-45"
    >
        <h6
            className="MuiTypography-root-48 MuiTypography-h6-65 MuiTypography-colorInherit-77"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-83 MuiGrid-spacing-xs-16-106 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            />
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            />
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            />
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            >
                <center>
                    <img
                        alt=""
                        className="Connect-Widget--maxImageSize-3"
                        height={undefined}
                        src="https://openplatform.dbc.dk/v3/storage/3ac3d6ce-3c19-427c-88b3-ce11931186e1"
                        style={undefined}
                        width={undefined}
                    />
                </center>
            </div>
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            >
                <div
                    className="MuiTypography-root-48 MuiTypography-body1-57"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<h1 id=\\"velkommen-til-quizzen\\">Velkommen til quizzen</h1>
                            <p>Ud i det blå</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            >
                <button
                    className="MuiButtonBase-root-206 MuiButton-root-180 MuiButton-contained-191 MuiButton-containedPrimary-192 MuiButton-raised-194 MuiButton-raisedPrimary-195 MuiButton-fullWidth-205"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-181"
                    >
                        Start
                    </span>
                    <span
                        className="MuiTouchRipple-root-209"
                    />
                </button>
            </div>
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            />
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            />
            <div
                className="MuiGrid-item-84 MuiGrid-grid-xs-12-123"
            />
        </div>
    </div>
</center>,
]
`;

exports[`renders info pages 2`] = `
Array [
  <header
    className="MuiPaper-root-225 MuiPaper-elevation4-231 MuiAppBar-root-216 MuiAppBar-positionStatic-220 MuiAppBar-colorPrimary-223"
>
    <div
        className="MuiToolbar-root-252 MuiToolbar-regular-254 MuiToolbar-gutters-253"
    >
        <h6
            className="MuiTypography-root-256 MuiTypography-h6-273 MuiTypography-colorInherit-285"
        >
            Quiz test eksempel
        </h6>
    </div>
</header>,
  <center
    style={
        Object {
            "background": "url(\\"https://openplatform.dbc.dk/v3/storage/ce096071-b6ab-4a0d-8b81-93cfa8ee0a40?width=1024\\") no-repeat center center fixed",
            "backgroundSize": "cover",
          }
    }
>
    <div
        style={
            Object {
                "backgroundColor": "rgba(196,200,206,0.7)",
              }
        }
    >
        <div
            className="MuiGrid-container-291 MuiGrid-spacing-xs-16-314 Connect-Widget--container-2"
        >
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            />
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            />
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            />
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            >
                <div
                    className="MuiTypography-root-256 MuiTypography-body1-265"
                >
                    <div
                        dangerouslySetInnerHTML={
                            Object {
                                "__html": "<p>Der er ikke mere <del>mælk</del> hjælp</p>
                            ",
                              }
                        }
                    />
                </div>
            </div>
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            >
                <button
                    className="MuiButtonBase-root-414 MuiButton-root-388 MuiButton-contained-399 MuiButton-containedPrimary-400 MuiButton-raised-402 MuiButton-raisedPrimary-403 MuiButton-fullWidth-413"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                >
                    <span
                        className="MuiButton-label-389"
                    >
                        Tilbage
                    </span>
                    <span
                        className="MuiTouchRipple-root-417"
                    />
                </button>
            </div>
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            />
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            />
            <div
                className="MuiGrid-item-292 MuiGrid-grid-xs-12-331"
            />
        </div>
    </div>
</center>,
]
`;
